gcc/testsuite/g++.old-deja/g++.jason/init4.C
// { dg-do assemble  }
struct A { int i; };

A a = {{{1}}};			// { dg-error "" } causes abort
